[gd_scene load_steps=3 format=2]

[ext_resource path="res://Entities/ScreenTransitor/ScreenTransitor.gd" type="Script" id=1]
[ext_resource path="res://Entities/PlayerAreaNotifier/PlayerAreaNotifier.tscn" type="PackedScene" id=2]

[node name="ScreenTransitor" type="ReferenceRect"]
pause_mode = 2
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 8, 8 )
script = ExtResource( 1 )
transit_duration = Vector2( 1.065, 0.94 )

[node name="AreaNotifier" parent="." instance=ExtResource( 2 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Label" parent="AreaNotifier" index="1"]
custom_colors/font_color = Color( 0, 1, 0.407843, 1 )
text = "TRANSIT"

[connection signal="entered_area" from="AreaNotifier" to="." method="_on_AreaNotifier_entered_area"]

[editable path="AreaNotifier"]
